--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,32 @@
--   repo: git://github.com/pre-commit/pre-commit-hooks
-    sha: v0.8.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: autopep8-wrapper
-    -   id: check-added-large-files
-    -   id: check-ast
-    -   id: check-byte-order-marker
-    -   id: check-case-conflict
-    -   id: check-docstring-first
-    -   id: check-merge-conflict
-    -   id: detect-private-key
-    -   id: end-of-file-fixer
-    -   id: flake8
-    -   id: requirements-txt-fixer
+fail_fast: true
+minimum_pre_commit_version: '1.16.1'
+repos:
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v2.2.1
+      hooks:
+          - id: check-added-large-files
+            args: ['--maxkb=400']
+            exclude: (\.ipynb)$
+          - id: check-ast
+          - id: check-docstring-first
+          - id: check-executables-have-shebangs
+          - id: check-json
+          - id: check-merge-conflict
+          - id: check-symlinks
+          - id: check-yaml
+          - id: debug-statements
+          - id: fix-encoding-pragma
+          - id: trailing-whitespace
+    - repo: local
+      hooks:
+          - id: init-clean
+            name: init-clean
+            entry: clean_ipynb --no-autoflake
+            language: system
+            files: __init__\.py$
+          - id: python-clean
+            name: python-clean
+            entry: clean_ipynb --no-ipynb
+            language: system
+            files: \.py$
+            exclude: __init__\.py$
